nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
    - name: 80-tcp
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: nginx
  type: ClusterIP
