nginx/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  port:
    targetPort: 80-tcp
  to:
    kind: Service
    name: nginx
